--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Vrushalibannur/Assignment_1/blob/main/Assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -265,7 +275,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPekhyvVlzDB51SJcRiEw2P",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
